--- a/api-deployment.yaml
+++ b/api-deployment.yaml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: synergychat-api
   labels:
     app: synergychat-api
+  name: synergychat-api
 spec:
   replicas: 1
   selector:
@@ -14,12 +14,25 @@ spec:
       labels:
         app: synergychat-api
     spec:
+      volumes:
+        - name: synergychat-api-volume
+          persistentVolumeClaim:
+            claimName: synergychat-api-pvc
       containers:
-        - name: synergychat-api
-          image: bootdotdev/synergychat-api:latest
+        - image: bootdotdev/synergychat-api:latest
+          name: synergychat-api
+          volumeMounts:
+            - name: synergychat-api-volume
+              mountPath: /persist
           env:
             - name: API_PORT
               valueFrom:
                 configMapKeyRef:
                   name: synergychat-api-configmap
                   key: API_PORT
+            - name: API_DB_FILEPATH
+              valueFrom:
+                configMapKeyRef:
+                  name: synergychat-api-configmap
+                  key: API_DB_FILEPATH
+
